# aiopathtrain

./: .pre-commit-config.yaml  .yamllint.yaml  README.md  demo.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
path_train/: __init__.py
src/aiopathtrain/: __init__.py  __main__.py
src/path_train/: __init__.py
tests/: test_aiopathtrain.py  test_path_train.py
