[project]
name = "aiopathtrain"
requires-python = ">=3.11"
description = "Subscriber-based client library for getting realtime PATH train information"
dynamic = ["version"]
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Yuxin Wang", email = "yuxinwang.dev@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiohttp",
    "cryptography",
    "signalrcore",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-asyncio",
]

[build-system]
requires = ["setuptools >= 61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "6.0"
asyncio_mode = "auto"

[tool.bandit]
exclude_dirs = ["tests"]

[tool.ruff]
line-length = 99
target-version = "py311"

[tool.ruff.lint]
extend-select = ["I"]
